syntax = "proto3";

package blog;

option go_package= "bitbucket.com/mightnvi/grpc-blog/proto";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message CreatBlogRequest {
  string title = 1;
  string author_id = 2;
  string content = 3;
}

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message BlogId {
  string id = 1;
}

message ListBlogResponse {
  repeated Blog blogs = 1;
}

service BlogService {
  rpc Create (CreatBlogRequest) returns (BlogId) {
    option (google.api.http) = {
      post: "/api/v1/blog"
      body: "*"
    };
  };
  rpc ReadBlog (BlogId) returns (Blog) {
    option (google.api.http) = {
      get: "/api/v1/blog/{id}"
    };
  };
  rpc UpdateBlog (Blog) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/api/v1/blog/{id}"
      body: "*"
    };
  };
  rpc DeleteBlog (BlogId) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/blog/{id}"
    };
  };
  rpc ListBlog (google.protobuf.Empty) returns (stream Blog) {
    option (google.api.http) = {
      get: "/api/v1/blogs/stream"
    };
  };
  rpc ListBlogRepeated (google.protobuf.Empty) returns (ListBlogResponse) {
    option (google.api.http) = {
      get: "/api/v1/blogs"
    };
  };

}